--- a/env.test.template
+++ b/env.test.template
@@ -32,3 +32,8 @@ PLAYWRIGHT_HEADLESS=true
 # CI/CD Flags
 CI=false
 SKIP_ENV_VALIDATION=false
+
+# CORS Configuration
+# Comma-separated list of allowed origins for API requests
+# In production, set this to your frontend domain(s)
+ALLOWED_ORIGIN=http://localhost:3000
