--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
-version: '3.9'
-
 services:
   frontend:
+    env_file:
+      - .env
     build:
       context: ./frontend
       dockerfile: Dockerfile.dev
@@ -12,10 +12,11 @@ services:
       - NEXT_PUBLIC_SUPABASE_URL=${NEXT_PUBLIC_SUPABASE_URL}
       - NEXT_PUBLIC_SUPABASE_ANON_KEY=${NEXT_PUBLIC_SUPABASE_ANON_KEY}
       - NEXT_PUBLIC_BASE_URL=${NEXT_PUBLIC_BASE_URL:-http://localhost:3000}
+      - WATCHPACK_POLLING=true
+      - CHOKIDAR_USEPOLLING=true
     volumes:
       - ./frontend:/app
       - /app/node_modules
-      - /app/.next
     networks:
       - verified-network
     depends_on:
@@ -29,6 +30,8 @@ services:
       start_period: 40s
 
   backend:
+    env_file:
+      - .env
     build:
       context: ./backend
       dockerfile: Dockerfile.dev
@@ -36,14 +39,12 @@ services:
       - "4000:4000"
     environment:
       - NODE_ENV=development
-      - SUPABASE_URL=${SUPABASE_URL}
-      - SUPABASE_SERVICE_ROLE_KEY=${SUPABASE_SERVICE_ROLE_KEY}
-      - NEXT_PUBLIC_SUPABASE_URL=${NEXT_PUBLIC_SUPABASE_URL}
-      - NEXT_PUBLIC_SUPABASE_ANON_KEY=${NEXT_PUBLIC_SUPABASE_ANON_KEY}
+      - WATCHPACK_POLLING=true
+      - CHOKIDAR_USEPOLLING=true
+      - ALLOWED_ORIGIN=${ALLOWED_ORIGIN:-http://localhost:3000}
     volumes:
       - ./backend:/app
       - /app/node_modules
-      - /app/.next
     networks:
       - verified-network
     healthcheck:
@@ -69,6 +70,7 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
+
 
 networks:
   verified-network:
