--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
     "test:env:down": "docker-compose -f docker-compose.test.yml down -v",
     "test:db": "node scripts/test-db-connection.js",
     "test:docker": "bash scripts/test-docker.sh",
-    "test:market": "ts-node scripts/seed-test-market.ts",
-    "test:matching": "ts-node scripts/validate-matching.ts",
-    "test:pricing": "ts-node scripts/validate-pricing.ts",
-    "seed": "node scripts/seed-products.js",
+    "test:market": "ts-node scripts/validation/seed-test-market.ts",
+    "test:matching": "ts-node scripts/validation/validate-matching.ts",
+    "test:pricing": "ts-node scripts/validation/validate-pricing.ts",
+    "seed": "node scripts/demo/seed-products.js",
+    "seed:demo": "ts-node scripts/demo/seed-mvp-demo.ts",
+    "seed:enhanced": "ts-node scripts/demo/seed-enhanced-demo.ts",
+    "demo:setup": "pnpm seed && pnpm seed:demo",
+    "demo:enhanced": "pnpm seed && pnpm seed:enhanced",
+    "test:integration": "cd backend && pnpm test tests/integration",
     "setup": "node scripts/setup-wizard.js"
   },
   "dependencies": {
